syntax = "proto3";

package cjail;

message ListImagesRequest {
}

message ListImagesResponse {
    repeated string image_ref = 1;
}

message ExecuteRequest {
  // Docker image reference, e.g.
  // docker.io/library/busybox@sha256:9810966b5f712084ea05bf28fc8ba2c8fb110baa2531a10e2da52c1efc504698
  // Must be be pre-loaded to cjail.
  string base_image_ref = 1;

  // Path to file to execute.
  string file = 2;
  // List of arguments to the executable file.
  repeated string args = 3;
}

message ExecuteResponse {
  int64 exit_code = 1;
  bytes stdout = 2;
  bytes stderr = 3;
  bytes debug_output = 4;
}

service CJail {
    // ListImages returns the list of the registered base images that can be used to run commands.
    rpc ListImages(ListImagesRequest) returns (ListImagesResponse);
    rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}
